@@ -27,10 +27,7 @@
 #include <climits>
 #include <fcntl.h>
 #include <unistd.h>
-
-#ifdef HAVE_SYS_MMAN_H
 #include <sys/mman.h>
-#endif
 
 #ifdef HAVE_READV
 #include <sys/uio.h>
@@ -49,40 +46,6 @@
 #include "gold-threads.h"
 #include "fileread.h"
 
-// For systems without mmap support.
-#ifndef HAVE_MMAP
-# define mmap gold_mmap
-# define munmap gold_munmap
-# ifndef MAP_FAILED
-#  define MAP_FAILED (reinterpret_cast<void*>(-1))
-# endif
-# ifndef PROT_READ
-#  define PROT_READ 0
-# endif
-# ifndef MAP_PRIVATE
-#  define MAP_PRIVATE 0
-# endif
-
-# ifndef ENOSYS
-#  define ENOSYS EINVAL
-# endif
-
-static void *
-gold_mmap(void *, size_t, int, int, int, off_t)
-{
-  errno = ENOSYS;
-  return MAP_FAILED;
-}
-
-static int
-gold_munmap(void *, size_t)
-{
-  errno = ENOSYS;
-  return -1;
-}
-
-#endif
-
 #ifndef HAVE_READV
 struct iovec { void* iov_base; size_t iov_len; };
 ssize_t
@@ -95,36 +58,6 @@ readv(int, const iovec*, int)
 namespace gold
 {
 
-// Get the last modified time of an unopened file.
-
-bool
-get_mtime(const char* filename, Timespec* mtime)
-{
-  struct stat file_stat;
-
-  if (stat(filename, &file_stat) < 0)
-    return false;
-#ifdef HAVE_STAT_ST_MTIM
-  mtime->seconds = file_stat.st_mtim.tv_sec;
-  mtime->nanoseconds = file_stat.st_mtim.tv_nsec;
-#else
-  mtime->seconds = file_stat.st_mtime;
-  mtime->nanoseconds = 0;
-#endif
-  return true;
-}
-
-// Class File_read.
-
-// A lock for the File_read static variables.
-static Lock* file_counts_lock = NULL;
-static Initialize_lock file_counts_initialize_lock(&file_counts_lock);
-
-// The File_read static variables.
-unsigned long long File_read::total_mapped_bytes;
-unsigned long long File_read::current_mapped_bytes;
-unsigned long long File_read::maximum_mapped_bytes;
-
 // Class File_read::View.
 
 File_read::View::~View()
@@ -133,17 +66,12 @@ File_read::View::~View()
   switch (this->data_ownership_)
     {
     case DATA_ALLOCATED_ARRAY:
-      free(const_cast<unsigned char*>(this->data_));
+      delete[] this->data_;
       break;
     case DATA_MMAPPED:
       if (::munmap(const_cast<unsigned char*>(this->data_), this->size_) != 0)
         gold_warning(_("munmap failed: %s"), strerror(errno));
-      if (!parameters->options_valid() || parameters->options().stats())
-	{
-	  file_counts_initialize_lock.initialize();
-	  Hold_optional_lock hl(file_counts_lock);
-	  File_read::current_mapped_bytes -= this->size_;
-	}
+      File_read::current_mapped_bytes -= this->size_;
       break;
     case DATA_NOT_OWNED:
       break;
@@ -172,6 +100,15 @@ File_read::View::is_locked()
 }
 
 // Class File_read.
+
+// A lock for the File_read static variables.
+static Lock* file_counts_lock = NULL;
+static Initialize_lock file_counts_initialize_lock(&file_counts_lock);
+
+// The File_read static variables.
+unsigned long long File_read::total_mapped_bytes;
+unsigned long long File_read::current_mapped_bytes;
+unsigned long long File_read::maximum_mapped_bytes;
 
 File_read::~File_read()
 {
@@ -329,10 +266,6 @@ inline File_read::View*
 File_read::find_view(off_t start, section_size_type size,
 		     unsigned int byteshift, File_read::View** vshifted) const
 {
-  gold_assert(start <= this->size_
-	      && (static_cast<unsigned long long>(size)
-		  <= static_cast<unsigned long long>(this->size_ - start)));
-
   if (vshifted != NULL)
     *vshifted = NULL;
 
@@ -460,9 +393,16 @@ File_read::make_view(off_t start, section_size_type size,
 		     unsigned int byteshift, bool cache)
 {
   gold_assert(size > 0);
-  gold_assert(start <= this->size_
-	      && (static_cast<unsigned long long>(size)
-		  <= static_cast<unsigned long long>(this->size_ - start)));
+
+  // Check that start and end of the view are within the file.
+  if (start > this->size_
+      || (static_cast<unsigned long long>(size)
+          > static_cast<unsigned long long>(this->size_ - start)))
+    gold_fatal(_("%s: attempt to map %lld bytes at offset %lld exceeds "
+                 "size of file; the file may be corrupt"),
+		   this->filename().c_str(),
+		   static_cast<long long>(size),
+		   static_cast<long long>(start));
 
   off_t poff = File_read::page_offset(start);
 
@@ -474,39 +414,33 @@ File_read::make_view(off_t start, section_size_type size,
       gold_assert(psize >= size);
     }
 
-  void* p;
-  View::Data_ownership ownership;
+  File_read::View* v;
   if (byteshift != 0)
     {
-      p = malloc(psize + byteshift);
-      if (p == NULL)
-	gold_nomem();
+      unsigned char* p = new unsigned char[psize + byteshift];
       memset(p, 0, byteshift);
-      this->do_read(poff, psize, static_cast<unsigned char*>(p) + byteshift);
-      ownership = View::DATA_ALLOCATED_ARRAY;
+      this->do_read(poff, psize, p + byteshift);
+      v = new File_read::View(poff, psize, p, byteshift, cache,
+                              View::DATA_ALLOCATED_ARRAY);
     }
   else
     {
       this->reopen_descriptor();
-      p = ::mmap(NULL, psize, PROT_READ, MAP_PRIVATE, this->descriptor_, poff);
-      if (p != MAP_FAILED)
-	{
-	  ownership = View::DATA_MMAPPED;
-	  this->mapped_bytes_ += psize;
-	}
-      else
-	{
-	  p = malloc(psize);
-	  if (p == NULL)
-	    gold_nomem();
-	  this->do_read(poff, psize, p);
-	  ownership = View::DATA_ALLOCATED_ARRAY;
-	}
-    }
+      void* p = ::mmap(NULL, psize, PROT_READ, MAP_PRIVATE,
+                       this->descriptor_, poff);
+      if (p == MAP_FAILED)
+	gold_fatal(_("%s: mmap offset %lld size %lld failed: %s"),
+		   this->filename().c_str(),
+		   static_cast<long long>(poff),
+		   static_cast<long long>(psize),
+		   strerror(errno));
 
-  const unsigned char* pbytes = static_cast<const unsigned char*>(p);
-  File_read::View* v = new File_read::View(poff, psize, pbytes, byteshift,
-					   cache, ownership);
+      this->mapped_bytes_ += psize;
+
+      const unsigned char* pbytes = static_cast<const unsigned char*>(p);
+      v = new File_read::View(poff, psize, pbytes, 0, cache,
+                              View::DATA_MMAPPED);
+    }
 
   this->add_view(v);
 
@@ -520,16 +454,6 @@ File_read::View*
 File_read::find_or_make_view(off_t offset, off_t start,
 			     section_size_type size, bool aligned, bool cache)
 {
-  // Check that start and end of the view are within the file.
-  if (start > this->size_
-      || (static_cast<unsigned long long>(size)
-          > static_cast<unsigned long long>(this->size_ - start)))
-    gold_fatal(_("%s: attempt to map %lld bytes at offset %lld exceeds "
-                 "size of file; the file may be corrupt"),
-		   this->filename().c_str(),
-		   static_cast<long long>(size),
-		   static_cast<long long>(start));
-
   unsigned int byteshift;
   if (offset == 0)
     byteshift = 0;
@@ -575,10 +499,7 @@ File_read::find_or_make_view(off_t offset, off_t start,
     {
       gold_assert(aligned);
 
-      unsigned char* pbytes;
-      pbytes = static_cast<unsigned char*>(malloc(v->size() + byteshift));
-      if (pbytes == NULL)
-	gold_nomem();
+      unsigned char* pbytes = new unsigned char[v->size() + byteshift];
       memset(pbytes, 0, byteshift);
       memcpy(pbytes + byteshift, v->data() + v->byteshift(), v->size());
 
@@ -789,9 +710,7 @@ File_read::clear_views(Clear_views_mode mode)
 	should_delete = false;
       else if (mode == CLEAR_VIEWS_ALL)
 	should_delete = true;
-      else if ((p->second->should_cache()
-		|| p->second == this->whole_file_view_)
-	       && keep_files_mapped)
+      else if (p->second->should_cache() && keep_files_mapped)
 	should_delete = false;
       else if (this->object_count_ > 1
       	       && p->second->accessed()
@@ -923,7 +842,7 @@ File_read::get_mtime()
 {
   struct stat file_stat;
   this->reopen_descriptor();
-
+  
   if (fstat(this->descriptor_, &file_stat) < 0)
     gold_fatal(_("%s: stat failed: %s"), this->name_.c_str(),
 	       strerror(errno));
@@ -993,40 +912,45 @@ Input_file::find_file(const Dirsearch& dirpath, int* pindex,
   else if (input_argument->is_lib()
 	   || input_argument->is_searched_file())
     {
-      std::vector<std::string> names;
-      names.reserve(2);
+      std::string n1, n2;
       if (input_argument->is_lib())
 	{
-	  std::string prefix = "lib";
-	  prefix += input_argument->name();
+	  n1 = "lib";
+	  n1 += input_argument->name();
 	  if (parameters->options().is_static()
 	      || !input_argument->options().Bdynamic())
-	    names.push_back(prefix + ".a");
+	    n1 += ".a";
 	  else
 	    {
-	      names.push_back(prefix + ".so");
-	      names.push_back(prefix + ".a");
+	      n2 = n1 + ".a";
+	      n1 += ".so";
 	    }
 	}
       else
-	names.push_back(input_argument->name());
+	n1 = input_argument->name();
 
-      for (std::vector<std::string>::const_iterator n = names.begin();
-	   n != names.end();
-	   ++n)
-	if (Input_file::try_extra_search_path(pindex, input_argument, *n,
-					      found_name, namep))
-	  return true;
+      if (Input_file::try_extra_search_path(pindex, input_argument, n1,
+					    found_name, namep))
+        return true;
+
+      if (!n2.empty() && Input_file::try_extra_search_path(pindex,
+							   input_argument, n2,
+							   found_name, namep))
+        return true;
 
       // It is not in the extra_search_path.
-      name = dirpath.find(names, is_in_sysroot, pindex, found_name);
+      name = dirpath.find(n1, n2, is_in_sysroot, pindex);
       if (name.empty())
 	{
 	  gold_error(_("cannot find %s%s"),
-		     input_argument->is_lib() ? "-l" : "",
+	             input_argument->is_lib() ? "-l" : "",
 		     input_argument->name());
 	  return false;
 	}
+      if (n2.empty() || name[name.length() - 1] == 'o')
+	*found_name = n1;
+      else
+	*found_name = n2;
       *namep = name;
       return true;
     }
@@ -1036,21 +960,22 @@ Input_file::find_file(const Dirsearch& dirpath, int* pindex,
       gold_assert(input_argument->extra_search_path() != NULL);
 
       if (try_extra_search_path(pindex, input_argument, input_argument->name(),
-				found_name, namep))
-	return true;
+                                found_name, namep))
+        return true;
 
       // extra_search_path failed, so check the normal search-path.
       int index = *pindex;
       if (index > 0)
-	--index;
-      name = dirpath.find(std::vector<std::string>(1, input_argument->name()),
-			  is_in_sysroot, &index, found_name);
+        --index;
+      name = dirpath.find(input_argument->name(), "",
+                          is_in_sysroot, &index);
       if (name.empty())
-	{
-	  gold_error(_("cannot find %s"),
-		     input_argument->name());
-	  return false;
-	}
+        {
+          gold_error(_("cannot find %s"),
+                     input_argument->name());
+          return false;
+        }
+      *found_name = input_argument->name();
       *namep = name;
       *pindex = index + 1;
       return true;
